# locobot_simulation_david

./: CMakeLists.txt  cahnged  changed  changed.owl  changed.properties  ontology.ttl  package.xml
config/: locobot_configs.gazebo
launch/: simulation.launch  xslocobot_description.launch
owl/: davids_ontology.ttl
plugins/: ROSLogicalCameraPlugin.hh  logcam_plugin.cc  logical_camera_plugin.cpp
scripts/: test.py
scripts/Ontology/: ontology_initialization.py
scripts/listeners/: data_collector.py  logic_camera_listener.py
scripts/listeners/Ontology/: ontology.ttl  ontology1.ttl  ontology_initialization.py  output.owl  output.ttl  query.py  reasoning.py
scripts/listeners/geometry/: distance_angles.py
scripts/movements/: controller.py  go_forward.py  look_around.py  teleport.py  teleport_on _start.py
scripts/perception/: detect.py
scripts/stream_reasoning/: stream_creator.py
urdf/: locobot.urdf.xacro  mobile_wx250s.urdf.xacro
worlds/: room_trash.world  xslocobot_gazebo.world
